--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.21.0",
 		"autoprefixer": "^10.4.14",
+		"daisyui": "^3.1.9",
 		"postcss": "^8.4.24",
 		"svelte": "^4.0.4",
 		"svelte-check": "^3.4.4",
