--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^2.3.0",
-		"@sveltejs/kit": "^1.21.0",
+		"@sveltejs/kit": "^1.22.1",
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^3.1.9",
-		"postcss": "^8.4.24",
-		"svelte": "^4.0.4",
-		"svelte-check": "^3.4.4",
+		"postcss": "^8.4.25",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.5",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.6.0",
 		"typescript": "^5.1.6",
-		"vite": "^4.3.9"
+		"vite": "^4.4.1"
 	},
 	"type": "module",
 	"dependencies": {
