--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@tiptap/core": "^2.0.3",
 		"@tiptap/pm": "^2.0.3",
-		"@tiptap/starter-kit": "^2.0.3"
+		"@tiptap/starter-kit": "^2.0.3",
+		"lucide-svelte": "^0.258.0"
 	}
 }
