--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^3.4.0",
+		"daisyui": "^3.5.0",
 		"postcss": "^8.4.27",
 		"svelte": "^4.1.1",
 		"svelte-check": "^3.4.6",
@@ -28,6 +28,7 @@
 		"@tiptap/core": "^2.0.4",
 		"@tiptap/pm": "^2.0.4",
 		"@tiptap/starter-kit": "^2.0.4",
-		"lucide-svelte": "^0.263.0"
+		"lucide-svelte": "^0.263.0",
+		"reveal.js": "^4.5.0"
 	}
 }
