--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-cloudflare": "^2.3.1",
 		"@sveltejs/kit": "^1.22.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/reveal.js": "^4.4.2",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^3.5.0",
 		"postcss": "^8.4.27",
