--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tiptap/core": "^2.0.4",
+		"@tiptap/extension-image": "^2.0.4",
 		"@tiptap/pm": "^2.0.4",
 		"@tiptap/starter-kit": "^2.0.4",
 		"lucide-svelte": "^0.263.0",
