feat: add hardbreak extension

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tiptap/core": "^2.0.4",
+		"@tiptap/extension-hard-break": "^2.0.4",
 		"@tiptap/extension-image": "^2.0.4",
 		"@tiptap/pm": "^2.0.4",
 		"@tiptap/starter-kit": "^2.0.4",
