--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tabler/icons-svelte": "^2.30.0",
 		"@tiptap/core": "^2.1.2",
 		"@tiptap/extension-hard-break": "^2.1.2",
 		"@tiptap/extension-image": "^2.1.2",
 		"@tiptap/pm": "^2.1.2",
 		"@tiptap/starter-kit": "^2.1.2",
-		"lucide-svelte": "^0.264.0",
 		"reveal.js": "^4.5.0"
 	}
 }
