--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.32.0",
 		"@tabler/icons-svelte": "^2.31.0",
 		"@tiptap/core": "^2.1.6",
 		"@tiptap/extension-hard-break": "^2.1.6",
