--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@picocss/pico": "2.0.0-alpha1",
 		"@supabase/supabase-js": "^2.33.1",
 		"@tiptap/core": "^2.1.7",
 		"@tiptap/extension-hard-break": "^2.1.7",
