--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tiptap/extension-image": "^2.1.7",
 		"@tiptap/pm": "^2.1.7",
 		"@tiptap/starter-kit": "^2.1.7",
+		"lucide-svelte": "^0.272.0",
 		"reveal.js": "^4.5.0"
 	}
 }
