--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
 		"@tiptap/extension-image": "^2.1.8",
 		"@tiptap/pm": "^2.1.8",
 		"@tiptap/starter-kit": "^2.1.8",
+		"@types/reveal.js": "^4.4.2",
 		"lucide-svelte": "^0.274.0",
-		"reveal.js": "^4.5.0"
+		"reveal.js": "^4.5.0",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2"
 	}
 }
