--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@supabase/supabase-js": "^2.33.1",
 		"@tiptap/core": "^2.1.8",
 		"@tiptap/extension-image": "^2.1.8",
+		"@tiptap/extension-placeholder": "^2.1.8",
 		"@tiptap/pm": "^2.1.8",
 		"@tiptap/starter-kit": "^2.1.8",
 		"@types/reveal.js": "^4.4.2",
