--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^1.25.0",
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.29",
+		"sass": "^1.66.1",
 		"standard": "^17.1.0",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.1",
@@ -30,7 +31,7 @@
 		"@tiptap/starter-kit": "^2.1.8",
 		"@types/reveal.js": "^4.4.2",
 		"lucide-svelte": "^0.276.0",
-		"reveal.js": "^4.6.0",
+		"reveal.js": "^4.6.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2"
 	}
