--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "src/lib/styles/pico"]
-	path = src/lib/styles/pico
+[submodule "src/lib/style/pico"]
+	path = src/lib/style/pico
 	url = https://github.com/picocss/pico.git
 	branch = v2
