--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check",
-		"check:watch": "svelte-kit sync && svelte-check --watch"
+		"check:watch": "svelte-kit sync && svelte-check --watch",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
@@ -18,7 +19,8 @@
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.3",
-		"vite": "^4.4.11"
+		"vite": "^4.4.11",
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"dependencies": {
