--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.429.0",
+		"@aws-sdk/s3-request-presigner": "^3.429.0",
 		"@supabase/supabase-js": "^2.38.1",
 		"@tiptap/core": "^2.1.12",
+		"@tiptap/extension-image": "^2.1.12",
 		"@tiptap/extension-placeholder": "^2.1.12",
 		"@tiptap/pm": "^2.1.12",
 		"@tiptap/starter-kit": "^2.1.12",
