--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.26.0",
 		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.9.3",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
@@ -23,8 +24,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.431.0",
-		"@aws-sdk/s3-request-presigner": "^3.431.0",
+		"@aws-sdk/client-s3": "^3.433.0",
+		"@aws-sdk/s3-request-presigner": "^3.433.0",
 		"@supabase/supabase-js": "^2.38.2",
 		"@tiptap/core": "^2.1.12",
 		"@tiptap/extension-image": "^2.1.12",
@@ -34,6 +35,7 @@
 		"@types/reveal.js": "^4.4.5",
 		"dayjs": "^1.11.10",
 		"lucide-svelte": "^0.288.0",
+		"openai": "^4.12.4",
 		"reveal.js": "^4.6.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2"
