--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.26.0",
 		"autoprefixer": "^10.4.16",
-		"daisyui": "^3.9.3",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
@@ -33,10 +32,14 @@
 		"@tiptap/pm": "^2.1.12",
 		"@tiptap/starter-kit": "^2.1.12",
 		"@types/reveal.js": "^4.4.5",
+		"bits-ui": "^0.6.2",
+		"clsx": "^2.0.0",
 		"dayjs": "^1.11.10",
 		"lucide-svelte": "^0.288.0",
 		"openai": "^4.12.4",
 		"reveal.js": "^4.6.1",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.14",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2"
 	}
