--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@aws-sdk/s3-request-presigner": "^3.433.0",
 		"@supabase/supabase-js": "^2.38.2",
 		"@tiptap/core": "^2.1.12",
+		"@tiptap/extension-document": "^2.1.12",
 		"@tiptap/extension-horizontal-rule": "^2.1.12",
 		"@tiptap/extension-image": "^2.1.12",
 		"@tiptap/extension-placeholder": "^2.1.12",
