--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.27.1",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/file-saver": "^2.0.6",
+		"@types/qrcode": "^1.5.4",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.2",
@@ -38,8 +40,10 @@
 		"bits-ui": "^0.8.0",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.10",
+		"file-saver": "^2.0.5",
 		"lucide-svelte": "^0.289.0",
 		"openai": "^4.14.0",
+		"qrcode": "^1.5.3",
 		"reveal.js": "^4.6.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.16",
