--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
 		"@aws-sdk/s3-request-presigner": "^3.438.0",
 		"@supabase/supabase-js": "^2.38.4",
 		"@tiptap/core": "^2.1.12",
+		"@tiptap/extension-bubble-menu": "^2.1.12",
 		"@tiptap/extension-document": "^2.1.12",
 		"@tiptap/extension-horizontal-rule": "^2.1.12",
 		"@tiptap/extension-image": "^2.1.12",
 		"@tiptap/extension-placeholder": "^2.1.12",
+		"@tiptap/extension-underline": "^2.1.12",
 		"@tiptap/pm": "^2.1.12",
 		"@tiptap/starter-kit": "^2.1.12",
 		"@types/reveal.js": "^4.4.5",
