--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@tiptap/core": "^2.1.12",
 		"@tiptap/extension-bubble-menu": "^2.1.12",
 		"@tiptap/extension-document": "^2.1.12",
+		"@tiptap/extension-gapcursor": "^2.1.12",
 		"@tiptap/extension-image": "^2.1.12",
 		"@tiptap/extension-placeholder": "^2.1.12",
 		"@tiptap/extension-underline": "^2.1.12",
@@ -43,6 +44,7 @@
 		"dayjs": "^1.11.10",
 		"file-saver": "^2.0.5",
 		"lucide-svelte": "^0.290.0",
+		"openai": "^4.15.3",
 		"qrcode": "^1.5.3",
 		"reveal.js": "^5.0.1",
 		"tailwind-merge": "^2.0.0",
