--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@types/reveal.js": "^4.4.6",
 		"bits-ui": "^0.9.4",
 		"clsx": "^2.0.0",
+		"cmdk-sv": "^0.0.7",
 		"dayjs": "^1.11.10",
 		"file-saver": "^2.0.5",
 		"lucide-svelte": "^0.292.0",
