--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
+		"svelte-check": "^3.6.1",
 		"tailwindcss": "^3.3.5",
 		"vite": "^4.5.0",
 		"vitest": "^0.34.6"
@@ -42,12 +42,14 @@
 		"@tiptap/starter-kit": "^2.1.12",
 		"@types/reveal.js": "^4.4.8",
 		"bits-ui": "^0.9.8",
+		"chart.js": "^4.4.0",
 		"clsx": "^2.0.0",
 		"cmdk-sv": "^0.0.12",
 		"dayjs": "^1.11.10",
 		"file-saver": "^2.0.5",
+		"frappe-charts": "^1.6.2",
 		"lucide-svelte": "^0.292.0",
-		"openai": "^4.19.1",
+		"openai": "^4.20.0",
 		"qrcode": "^1.5.3",
 		"reveal.js": "^5.0.2",
 		"tailwind-merge": "^2.0.0",
