--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
 		"frappe-charts": "^1.6.2",
 		"lucide-svelte": "^0.293.0",
 		"openai": "^4.20.1",
+		"pexels": "^1.4.0",
 		"qrcode": "^1.5.3",
 		"reveal.js": "^5.0.2",
-		"tailwind-merge": "^2.0.0",
+		"tailwind-merge": "^2.1.0",
 		"tailwind-variants": "^0.1.18",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.2"
