--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"tailwindcss": "^3.3.6",
-		"vite": "^4.5.1",
-		"vitest": "^1.0.1"
+		"vite": "^4.5.1"
 	},
 	"type": "module",
 	"dependencies": {
