--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check",
-		"check:watch": "svelte-kit sync && svelte-check --watch",
-		"test": "vitest"
+		"check:watch": "svelte-kit sync && svelte-check --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^2.3.4",
