--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --watch"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.4.1",
 		"@sveltejs/adapter-cloudflare": "^2.3.4",
 		"@sveltejs/kit": "^1.28.0",
 		"@tailwindcss/typography": "^0.5.10",
