--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.4.1",
-		"@sveltejs/adapter-cloudflare": "^2.3.4",
-		"@sveltejs/kit": "^1.30.3",
+		"@sveltejs/adapter-cloudflare": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/file-saver": "^2.0.7",
 		"@types/qrcode": "^1.5.5",
@@ -21,7 +21,8 @@
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"tailwindcss": "^3.3.6",
-		"vite": "^4.5.1"
+		"vite": "^5.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
