--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@biomejs/biome": "1.4.1",
 		"@sveltejs/adapter-cloudflare": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/file-saver": "^2.0.7",
 		"@types/qrcode": "^1.5.5",
@@ -21,13 +22,12 @@
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"tailwindcss": "^3.3.6",
-		"vite": "^5.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0"
+		"vite": "^5.0.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.473.0",
-		"@aws-sdk/s3-request-presigner": "^3.473.0",
+		"@aws-sdk/client-s3": "^3.474.0",
+		"@aws-sdk/s3-request-presigner": "^3.474.0",
 		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/auth-ui-svelte": "^0.2.8",
 		"@supabase/supabase-js": "^2.39.0",
