--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"clsx": "^2.0.0",
 		"cmdk-sv": "^0.0.12",
 		"dayjs": "^1.11.10",
+		"driver.js": "^1.3.1",
 		"file-saver": "^2.0.5",
 		"lucide-svelte": "^0.298.0",
 		"pexels": "^1.4.0",
