--- a/package.json
+++ b/package.json
@@ -28,18 +28,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.502.0",
     "@aws-sdk/s3-request-presigner": "^3.502.0",
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
+    "@editorjs/nested-list": "^1.4.2",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/supabase-js": "^2.39.3",
-    "@tiptap/core": "^2.2.0",
-    "@tiptap/extension-bubble-menu": "^2.2.0",
-    "@tiptap/extension-document": "^2.2.0",
-    "@tiptap/extension-gapcursor": "^2.2.0",
-    "@tiptap/extension-image": "^2.2.0",
-    "@tiptap/extension-placeholder": "^2.2.0",
-    "@tiptap/extension-underline": "^2.2.0",
-    "@tiptap/pm": "^2.2.0",
-    "@tiptap/starter-kit": "^2.2.0",
     "@types/reveal.js": "^4.4.8",
     "bits-ui": "^0.16.0",
     "clsx": "^2.1.0",
