Add table support

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@editorjs/header": "^2.8.1",
     "@editorjs/image": "^2.9.0",
     "@editorjs/nested-list": "^1.4.2",
+    "@editorjs/table": "^2.3.0",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/supabase-js": "^2.39.7",
