--- a/components.json
+++ b/components.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://shadcn-svelte.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/app.css",
@@ -9,5 +9,6 @@
   "aliases": {
     "components": "$lib/components",
     "utils": "$lib/utils"
-  }
+  },
+  "typescript": true
 }
