Migrate from Supabase to Pocektbase

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# Supabase
-PUBLIC_SUPABASE_URL = <local-supabase-url>
-PUBLIC_SUPABASE_ANON_KEY = <local-anon-key>
+# Pocketbase
+PUBLIC_POCKETBASE_URL = <pocketbase-public-url>
 
 # Cloudflare R2
 R2_ENDPOINT = <r2-api-url>
