--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@editorjs/image": "^2.9.0",
     "@editorjs/nested-list": "^1.4.2",
     "@editorjs/table": "^2.3.0",
-    "@supabase/supabase-js": "^2.39.7",
     "@types/reveal.js": "^5.0.1",
     "bits-ui": "^0.18.3",
     "clsx": "^2.1.0",
     "cmdk-sv": "^0.0.13",
     "lucide-svelte": "^0.340.0",
+    "pocketbase": "^0.21.1",
     "reveal.js": "^5.0.5",
     "svelte-radix": "^1.0.1",
     "tailwind-merge": "^2.2.1",
