--- a/package.json
+++ b/package.json
@@ -7,31 +7,33 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check",
-    "check:watch": "svelte-kit sync && svelte-check --watch"
+    "check:watch": "svelte-kit sync && svelte-check --watch",
+    "biome": "biome check --apply ./src/"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.3",
     "@sveltejs/adapter-cloudflare": "^4.4.0",
-    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/kit": "^2.5.10",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "svelte": "^4.2.16",
+    "svelte": "^4.2.17",
     "svelte-check": "^3.7.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.11"
   },
   "type": "module",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.577.0",
-    "@aws-sdk/s3-request-presigner": "^3.574.0",
+    "@aws-sdk/client-s3": "^3.583.0",
+    "@aws-sdk/s3-request-presigner": "^3.583.0",
     "@editorjs/editorjs": "^2.29.1",
     "@editorjs/header": "^2.8.1",
     "@editorjs/image": "^2.9.0",
     "@editorjs/nested-list": "^1.4.2",
     "@editorjs/table": "^2.3.0",
     "@types/reveal.js": "^5.0.3",
-    "bits-ui": "^0.21.7",
+    "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
     "cmdk-sv": "^0.0.17",
     "lucide-svelte": "^0.378.0",
