chore: Update environment variables and remove empty values

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Pocketbase
-PUBLIC_POCKETBASE_URL=<pocketbase-public-url>
+PUBLIC_POCKETBASE_URL=
 
 # Cloudflare R2
-R2_ENDPOINT=<r2-api-url>
-R2_ACCESS_KEY=<r2-cloud-access-key>
-R2_SECRET_KEY=<r2-cloud-secret-key>
-PUBLIC_R2_BUCKET_NAME=riju-user-assets
+R2_ENDPOINT=
+R2_ACCESS_KEY=
+R2_SECRET_KEY=
+PUBLIC_R2_BUCKET_NAME=
