--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/kit": "^2.15.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"lucide-svelte": "^0.469.0",
 		"postcss": "^8.4.49",
-		"svelte": "^5.16.1",
-		"svelte-check": "^4.1.1",
+		"svelte": "^5.17.1",
+		"svelte-check": "^4.1.3",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.17",
@@ -31,8 +31,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.722.0",
-		"@aws-sdk/s3-request-presigner": "^3.722.0",
+		"@aws-sdk/client-s3": "^3.723.0",
+		"@aws-sdk/s3-request-presigner": "^3.723.0",
 		"@editorjs/editorjs": "^2.30.7",
 		"@editorjs/header": "^2.8.8",
 		"@editorjs/image": "^2.10.1",
@@ -43,6 +43,7 @@
 		"reveal.js": "^5.1.0",
 		"svelte-radix": "^2.0.1",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.2"
-	}
+		"typescript": "^5.7.3"
+	},
+	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
