--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
 	"javascript": {
 		"formatter": {
 			"semicolons": "asNeeded",
-			"quoteStyle": "single"
+			"quoteStyle": "single",
+			"trailingCommas": "none"
 		}
 	},
 	"overrides": [
