--- a/biome.json
+++ b/biome.json
@@ -22,8 +22,7 @@
 			"linter": {
 				"rules": {
 					"style": {
-						"useConst": "off",
-						"useImportType": "off"
+						"useConst": "off"
 					}
 				}
 			}
