--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
 		"@editorjs/image": "^2.10.2",
 		"@editorjs/nested-list": "^1.4.3",
 		"@editorjs/table": "^2.4.3",
+		"@supabase/supabase-js": "^2.49.1",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@types/reveal.js": "^5.0.5",
+		"cheerio": "^1.0.0",
 		"pocketbase": "^0.25.2",
 		"reveal.js": "^5.1.0",
 		"tslib": "^2.8.1",
