--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,8 @@
 			"linter": {
 				"rules": {
 					"style": {
-						"useConst": "off"
+						"useConst": "off",
+						"useImportType": "off"
 					}
 				}
 			}
