--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@tailwindcss/postcss": "^4.0.12",
 		"@types/reveal.js": "^5.0.5",
 		"cheerio": "^1.0.0",
+		"posthog-js": "^1.229.5",
 		"reveal.js": "^5.1.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2"
