--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.20.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.21",
 		"bits-ui": "^1.3.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.19",
 		"lucide-svelte": "^0.483.0",
-		"mdsvex": "^0.12.3",
 		"postcss": "^8.5.3",
 		"svelte": "^5.25.3",
 		"svelte-check": "^4.1.5",
@@ -44,10 +42,5 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2"
 	},
-	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
-	}
+	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
