--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
 		"@editorjs/table": "^2.4.4",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tailwindcss/postcss": "^4.0.17",
+		"@types/cheerio": "^0.22.35",
 		"@types/reveal.js": "^5.0.5",
+		"cheerio": "^1.0.0",
 		"reveal.js": "^5.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2"
