--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "riju",
-	"version": "0.9.1",
+	"version": "0.9.2",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -48,8 +48,6 @@
 	},
 	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
 	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
+		"onlyBuiltDependencies": ["esbuild"]
 	}
 }
