--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.20.5",
+		"@sveltejs/kit": "^2.20.7",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.21",
@@ -23,12 +23,12 @@
 		"lucide-svelte": "^0.488.0",
 		"mdsvex": "^0.12.3",
 		"postcss": "^8.5.3",
-		"svelte": "^5.26.2",
+		"svelte": "^5.27.3",
 		"svelte-check": "^4.1.6",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
-		"vite": "^6.2.6"
+		"vite": "^6.3.2"
 	},
 	"type": "module",
 	"dependencies": {
@@ -38,13 +38,13 @@
 		"@editorjs/nested-list": "^1.4.3",
 		"@editorjs/table": "^2.4.4",
 		"@supabase/supabase-js": "^2.49.4",
-		"@tailwindcss/postcss": "^4.1.3",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@types/reveal.js": "^5.0.5",
 		"reveal.js": "^5.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3"
 	},
-	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+	"packageManager": "pnpm@10.8.1",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
