--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.21",
-		"bits-ui": "^1.4.3",
+		"bits-ui": "^1.4.6",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.19",
 		"lucide-svelte": "^0.485.0",
 		"postcss": "^8.5.3",
 		"svelte": "^5.28.2",
-		"svelte-check": "^4.1.6",
+		"svelte-check": "^4.1.7",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
@@ -36,11 +36,14 @@
 		"@editorjs/image": "^2.10.2",
 		"@editorjs/nested-list": "^1.4.3",
 		"@editorjs/table": "^2.4.4",
+		"@google/generative-ai": "^0.24.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tailwindcss/postcss": "^4.1.5",
 		"@types/cheerio": "^0.22.35",
 		"@types/reveal.js": "^5.0.5",
+		"canvas": "^3.1.0",
 		"cheerio": "^1.0.0",
+		"pdfjs-dist": "^5.2.133",
 		"reveal.js": "^5.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3"
