Add Google GenAI integration and file upload handling in dashboard
- Introduced `@google/genai` dependency in `package.json` and updated `pnpm-lock.yaml`.
- Created `gemini.ts` to initialize the Google GenAI client with the API key.
- Implemented file upload functionality in `+page.server.ts` to handle PDF and image uploads, processing them accordingly.
- Updated `+page.svelte` to include a form for file uploads and display success/error messages based on the upload outcome.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@editorjs/image": "^2.10.2",
 		"@editorjs/nested-list": "^1.4.3",
 		"@editorjs/table": "^2.4.4",
+		"@google/genai": "^0.12.0",
 		"@google/generative-ai": "^0.24.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tailwindcss/postcss": "^4.1.5",
