--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
 		"bits-ui": "^1.4.6",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.19",
-		"lucide-svelte": "^0.485.0",
+		"lucide-svelte": "^0.507.0",
 		"postcss": "^8.5.3",
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.7",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
-		"vite": "^6.3.4"
+		"vite": "^6.3.5"
 	},
 	"type": "module",
 	"dependencies": {
@@ -40,7 +40,6 @@
 		"@google/generative-ai": "^0.24.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"@tailwindcss/postcss": "^4.1.5",
-		"@types/cheerio": "^0.22.35",
 		"@types/reveal.js": "^5.0.5",
 		"canvas": "^3.1.0",
 		"cheerio": "^1.0.0",
@@ -50,8 +49,6 @@
 		"typescript": "^5.8.3"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
+		"onlyBuiltDependencies": ["esbuild"]
 	}
 }
