--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.20.7",
+		"@sveltejs/kit": "^2.20.8",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.21",
-		"bits-ui": "^1.3.19",
+		"bits-ui": "^1.4.6",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.19",
-		"lucide-svelte": "^0.501.0",
-		"mdsvex": "^0.12.3",
+		"lucide-svelte": "^0.507.0",
+		"mdsvex": "^0.12.5",
 		"postcss": "^8.5.3",
-		"svelte": "^5.28.1",
-		"svelte-check": "^4.1.6",
+		"svelte": "^5.28.2",
+		"svelte-check": "^4.1.7",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
-		"vite": "^6.3.4"
+		"vite": "^6.3.5"
 	},
 	"type": "module",
 	"dependencies": {
@@ -38,7 +38,7 @@
 		"@editorjs/nested-list": "^1.4.3",
 		"@editorjs/table": "^2.4.4",
 		"@supabase/supabase-js": "^2.49.4",
-		"@tailwindcss/postcss": "^4.1.4",
+		"@tailwindcss/postcss": "^4.1.5",
 		"@types/reveal.js": "^5.0.5",
 		"reveal.js": "^5.2.1",
 		"tslib": "^2.8.1",
@@ -46,8 +46,6 @@
 	},
 	"packageManager": "pnpm@10.8.1",
 	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
+		"onlyBuiltDependencies": ["esbuild"]
 	}
 }
